Move project to src folder.

--- a/project/server/package.json
+++ b/project/server/package.json
@@ -4,8 +4,7 @@
   "description": "This is an API to interact with Kineses Code Exercise API # Introduction This API allow to create, modify and delete products, discounts, and orders. # User Authentication This API does not contain any kind of user validation but It request to have a valid authentication user to interact with it. For more information about user Authentication, please refer to [Kinesis Authentication API](https://auth.kinesis.singleton.com.au/). ",
   "main": "index.js",
   "scripts": {
-    "prestart": "npm install",
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "keywords": [
     "openapi-generator",
