--- a/project/server/package.json
+++ b/project/server/package.json
@@ -2,13 +2,24 @@
   "name": "kinesis-code-exercise-api",
   "version": "1.0.0",
   "description": "This is an API to interact with Kineses Code Exercise API # Introduction This API allow to create, modify and delete products, discounts, and orders. # User Authentication This API does not contain any kind of user validation but It request to have a valid authentication user to interact with it. For more information about user Authentication, please refer to [Kinesis Authentication API](https://auth.kinesis.singleton.com.au/). ",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "build-all": "npm run build",
+    "build": "npm run tsc",
+    "start": "npm run tsc && NODE_ENV=production node dist/server.js",
+    "start-pm2": "NODE_ENV=production pm2-runtime start dist/server.js",
+    "start-ts": "ts-node src/server.ts -r dotenv/config",
+    "tsc": "rm -rf dist && tsc --traceResolution",
+    "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/server.ts",
+    "watch-node": "nodemon dist/server.js",
+    "watch-ts": "tsc -w",
+    "lint": "tslint --project ./",
+    "test": "mocha -r ts-node/register --recursive test"
   },
   "keywords": [
     "openapi-generator",
-    "openapi"
+    "openapi",
+    "kinesis"
   ],
   "license": "Unlicense",
   "private": true,
@@ -17,22 +28,40 @@
     "camelcase": "^5.3.1",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-openapi-validator": "^3.9.1",
+    "helmet": "^4.2.0",
+    "http": "0.0.1-security",
     "js-yaml": "^3.3.0",
+    "normalize-port": "^1.0.0",
+    "oas-tools": "^2.1.8",
     "ono": "^5.0.1",
     "openapi-sampler": "^1.0.0-beta.15",
     "swagger-ui-express": "^4.0.2",
+    "typescript": "^4.1.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.8",
+    "@types/express": "^4.17.9",
+    "@types/js-yaml": "^3.12.5",
+    "@types/node": "^14.14.9",
+    "@types/swagger-ui-express": "^4.1.2",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.17.2",
-    "mocha": "^7.1.1"
+    "mocha": "^7.1.1",
+    "nodemon": "^2.0.6",
+    "swagger-tools": "^0.10.4",
+    "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.0.0",
+    "tsconfig-paths": "^3.9.0",
+    "tslint": "^6.1.3"
   },
   "eslintConfig": {
     "env": {
