--- a/project/server/package.json
+++ b/project/server/package.json
@@ -34,11 +34,15 @@
     "helmet": "^4.2.0",
     "http": "0.0.1-security",
     "js-yaml": "^3.3.0",
+    "mysql": "^2.18.1",
     "normalize-port": "^1.0.0",
     "oas-tools": "^2.1.8",
     "ono": "^5.0.1",
     "openapi-sampler": "^1.0.0-beta.15",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.0",
     "swagger-ui-express": "^4.0.2",
+    "typeorm": "^0.2.29",
     "typescript": "^4.1.2",
     "winston": "^3.2.1"
   },
@@ -48,6 +52,7 @@
     "@types/express": "^4.17.9",
     "@types/js-yaml": "^3.12.5",
     "@types/node": "^14.14.9",
+    "@types/swagger-tools": "^0.10.6",
     "@types/swagger-ui-express": "^4.1.2",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
