--- a/project/server/package.json
+++ b/project/server/package.json
@@ -14,7 +14,11 @@
     "watch-node": "nodemon dist/server.js",
     "watch-ts": "tsc -w",
     "lint": "tslint --project ./",
-    "test": "mocha -r ts-node/register --recursive test"
+    "test-clean": "rm -f data/kinesis-exercise-testing.sqlite",
+    "test": "npm run test-clean && NODE_ENV=testing mocha -r ts-node/register -r tsconfig-paths/register test/**/*.test.ts",
+    "test-watch": "npm run test-clean && nodemon --watch . --ext ts --exec \"mocha -r ts-node/register -r tsconfig-paths/register test/**/*.test.ts\"",
+    "test-generate": "oatts generate -s src/api/openapi.yaml -w test",
+    "debug": "ts-node-dev --inspect --respawn --transpile-only -r tsconfig-paths/register src/server.ts"
   },
   "keywords": [
     "openapi-generator",
@@ -47,11 +51,14 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.14",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
     "@types/js-yaml": "^3.12.5",
+    "@types/mocha": "^8.0.4",
     "@types/node": "^14.14.9",
+    "@types/supertest": "^2.0.10",
     "@types/swagger-tools": "^0.10.6",
     "@types/swagger-ui-express": "^4.1.2",
     "axios": "^0.19.0",
@@ -62,6 +69,8 @@
     "eslint-plugin-import": "^2.17.2",
     "mocha": "^7.1.1",
     "nodemon": "^2.0.6",
+    "oatts": "^1.6.0",
+    "supertest": "^6.0.1",
     "swagger-tools": "^0.10.4",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0",
